--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="config-ecran">
         <h2>JEU DES ALLUMETTES</h2>
-        <label for="nombre-joueur">Nombre de joueurs (entre 2 et 8) :</label>
+        <label for="nombre-joueur"><b>Choisissez le nombre de joueurs (entre 2 et 8) :</b></label>
         <input type="number" id="nombre-joueur" min="2" max="8">
         <button id="btnStart">Démarrer le Jeu</button>
       </div>
@@ -22,7 +22,7 @@
         <!-- Conteneur pour afficher les allumettes restantes -->
         <div id="allumettes-container"></div>
     
-        <label for="allumettes-retirees">Nombre d'allumettes à retirer (entre 1 et 6) :</label>
+        <label for="allumettes-retirees"><b>Choisissez le nombre d'allumettes à retirer (entre 1 et 6) :</b></label>
         <input type="number" id="allumettes-retirees" min="1" max="6">
         <button id="btn-retirer">Retirer Allumettes</button>
         
