--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="config-ecran">
-        <h2>JEU DES ALLUMETTES</h2>
+        <h2>🔥JEU DES ALLUMETTES🔥</h2>
         <label for="nombre-joueur"><b>Choisissez le nombre de joueurs (entre 2 et 8) :</b></label>
         <input type="number" id="nombre-joueur" min="2" max="8">
         <button id="btnStart">Démarrer le Jeu</button>
@@ -25,8 +25,6 @@
         <label for="allumettes-retirees"><b>Choisissez le nombre d'allumettes à retirer (entre 1 et 6) :</b></label>
         <input type="number" id="allumettes-retirees" min="1" max="6">
         <button id="btn-retirer">Retirer Allumettes</button>
-        
-        <!-- Bouton pour relancer le jeu -->
         <button id="btnReplay">Rejouer</button>
     </div>
     <script src = script.js></script>
